# app-energy-monitor

./: .gitignore  CONTRIBUTING.md  LICENSE.COMMERCIAL  LICENSE.COMMUNITY  README.md  SPONSORSHIP.md  analyze_power.py  debug_energy.py  pyproject.toml  test_arrow_navigation.py  validate_energy.py
.github/: FUNDING.yml
config/: .env.example
src/: __init__.py  cli.py  collector.py  config.py  csv_writer.py  energy_estimator.py  live_dashboard.py  logger.py  models.py  powermetrics_parser.py  storage.py
tests/: __init__.py  test_energy_monitor.py
